[gd_scene load_steps=3 format=3 uid="uid://dxqovxiw5f0ej"]

[ext_resource type="Script" path="res://main_menu_intro.gd" id="1_ckl8y"]

[sub_resource type="LabelSettings" id="LabelSettings_jucek"]
font_size = 64

[node name="MainMenuIntro" type="CanvasLayer"]
script = ExtResource("1_ckl8y")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_top = 150.0
offset_right = 330.0
offset_bottom = 238.0
grow_horizontal = 2
text = "Clean sweep"
label_settings = SubResource("LabelSettings_jucek")
horizontal_alignment = 1

[node name="SingleplayerButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 350.0
offset_right = 75.0
offset_bottom = 410.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../MultiplayerButton")
theme_override_font_sizes/font_size = 32
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 472.0
offset_right = 125.0
offset_bottom = 532.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../SingleplayerButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 32
text = "Multiplayer"

[node name="QuitButton" type="Button" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.0
offset_top = 592.0
offset_right = 125.0
offset_bottom = 652.0
grow_horizontal = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../MultiplayerButton")
focus_neighbor_bottom = NodePath("../SingleplayerButton")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
